--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "bmi-calculator-flutter"]
 	path = bmi-calculator-flutter
 	url = https://github.com/londonappbrewery/bmi-calculator-flutter.git
+[submodule "Clima-Flutter"]
+	path = Clima-Flutter
+	url = https://github.com/Cha-Ji/Clima-Flutter.git
